# kcm_template_qml

./: CMakeLists.txt  configure.sh
src/: CMakeLists.txt  kcm.cpp  kcm.h
